--- a/login.html
+++ b/login.html
@@ -12,26 +12,26 @@
 
     <section class="login">
       <p>Somente no console? Entre para acessar seu progresso e suas compras.</p>
-      <button class="botao">PlayStation™Network</button>
-      <button class="botao"> Rede Xbox</button>
-      <button class="botao"> Conta Nintendo</button>
+      <button class="botao"><a href="https://my.account.sony.com/sonyacct/signin/?client_id=559bf940-f58b-41b4-9c4d-f60a5019f885&redirect_uri=https%3A%2F%2Fwww.epicgames.com%2Fid%2Foauth-authorized&state=eyJpZCI6IjNhOWEyY2Q2NTIwYzQyYzFiYTViNjcxM2RiMmNmMGJmIn0%3D&scope=openid+psn%3As2s&response_type=code&display=popup&service_entity=urn%3Aservice-entity%3Apsn&ui=pr&cid=8c06926a-5a0d-4977-9de6-7d751b45be86&error=login_required&error_code=4165&no_captcha=true#/signin/input/id" id="Play">PlayStation™️NetworkK</a></button>
+      <button class="botao"><a href="https://login.microsoft.com/consumers/fido/get?mkt=PT-BR&lc=1046&uiflavor=web" id="Play">Rede Xbox </a></button>
+      <button class="botao"><a href="https://accounts.nintendo.com/authorize_guide?redirect_uri=https%3A%2F%2Faccounts.nintendo.com%2Fconnect%2F1.0.0%2Fauthorize%3Fresponse_type%3Dcode%26client_id%3D1f6a6a4806931686%26redirect_uri%3Dhttps%253A%252F%252Faccounts.epicgames.com%252FOAuthAuthorized%26scope%3Dopenid%2Buser.screenName%26state%3DeyJpZCI6ImJmY2YwZmNiNDAzYTRmNjNiOGVhYjMxNzI1MjcwODg0In0%253D%26nonce%3DupN327p6%26interacted%3D1&type=mixed" id="Play">Conta Nintendo</a></button>
     </section>
 
     <section class="email-login">
       <p>Joga no PC ou dispositivo móvel?</p>
-      <input type="email" placeholder="Entre com seu e-mail">
+      <input type="email" placeholder="Entre com seu e-mail" required>
       <button class="botao">Continuar</button>
       <p class="primeira_vez">Sua primeira vez aqui? <a href="#">Criar uma conta</a></p>
     </section>
 
     <section class="plataforma-login">
       <p>Outras maneiras de entrar</p>
-      <button class="botao"> Google</button>
-      <button class="botao"> Steam</button>
-      <button class="botao"> Conta MyDisney</button>
-      <button class="botao"> Entrar com a Apple</button>
-      <button class="botao">Facebook</button>
-      <button class="botao">Conta LEGO®</button>
+      <button class="botao"><a href="https://accounts.nintendo.com/authorize_guide?redirect_uri=https%3A%2F%2Faccounts.nintendo.com%2Fconnect%2F1.0.0%2Fauthorize%3Fresponse_type%3Dcode%26client_id%3D1f6a6a4806931686%26redirect_uri%3Dhttps%253A%252F%252Faccounts.epicgames.com%252FOAuthAuthorized%26scope%3Dopenid%2Buser.screenName%26state%3DeyJpZCI6ImJmY2YwZmNiNDAzYTRmNjNiOGVhYjMxNzI1MjcwODg0In0%253D%26nonce%3DupN327p6%26interacted%3D1&type=mixed" id="Play"> Google</a></button>
+      <button class="botao"><a href="https://steamcommunity.com/openid/loginform/?goto=%2Fopenid%2Flogin%3Fopenid.claimed_id%3Dhttp%253A%252F%252Fspecs.openid.net%252Fauth%252F2.0%252Fidentifier_select%26openid.identity%3Dhttp%253A%252F%252Fspecs.openid.net%252Fauth%252F2.0%252Fidentifier_select%26openid.mode%3Dcheckid_setup%26openid.ns%3Dhttp%253A%252F%252Fspecs.openid.net%252Fauth%252F2.0%26openid.realm%3Dhttps%253A%252F%252Faccounts.epicgames.com%26openid.return_to%3Dhttps%253A%252F%252Faccounts.epicgames.com%252FOAuthAuthorized%253Fstate%253DeyJpZCI6IjdmMjQ2YmNmZjEzZjRmZmE5YmZmNTZhOTY0MzA3ZWQ3In0%253D" id="Play"> Steam</a>
+      <button class="botao"><a href="https://login.disney.com/en-US/BR/DTCI-DISNEYFORTNITE.WEB/interaction?interaction_token=eyJ6aXAiOiJERUYiLCJraWQiOiJhMGpJS1FoeDh1dUtPZEFqYTgxM2MxbzdLZkU1VFdUSzZVVUN5QklELTJnIiwiY3R5IjoiSldUIiwidHlwIjoiaXQrand0IiwiZW5jIjoiWEMyMFAiLCJhbGciOiJkaXIifQ..UIyEw5lig5v90XClaYoSGh2OsCihDVoU.JKug7oGjXvhM2Hf6NMyPuAK5E50nbHiaSjZDmfLKu1Pw9a9A7fRpHLWlku7AXe6OraonBW-DCsTyDkGrbqeaGRzEUf9DKAbSyZRTMvrL1sVxq0hKeLCwdhmlKRwHwbzzTe9XgS9o_DUAU1-cJUE4kN_uChsaKJC_PzuvYCUrWlyt2iDXAAQtqmEW_8GkDDMDShYEjA5x5ipa3Fg8vujmznoLPHpihpr9-HxzGOFHhkJiBxMpdwys85m9keMn9ooHpfgK8sKWQbDlfoJx4wyp1qOh4vDJevGH_XZHpt75AUDCrFF7301LKiS9FV4Eluf2HwnAC1d0bU3lp9tT7FPCyjJSFoVotKYr5bp2B9ZiZdHwd3kk08WcbDA148O7ifCYNOi8zREXrE-9Rxn560WJ41TCg8gS5oay9HMKVzlBLIrKw4qlCwsZxagS-Arhbq_MV0kwWfWFePuunAcXKyfE8wMULnJLZZKf68eR9VeKxKCUdM66R5HGk_V--iaBnyYh0MsOF0MJns100Cu2maxgcsm2dXtNQVy0MQnRmQPVh0aRCy_BJcqurbyBmX0Ubl0yRi4dy3WL489KR9vH79Qd9hQrlcmxuLoBagIOwwjas0-WA89qI_lH_fPgW7PKLavx138Y2gHPIFPjnG0xDlJYxNJJ6PZn3iqdWF1q9hlf0F_bCGkAcamz7A1-idIaGIM0OJAK35OUAH7tcaUPj1dBPvFdgyqL73_mXeJgvFuCBRZsPbEPz56rxAw4LrjEVZANnuSKRqjR_vcec7NJBQIpNPXpYLGCen7_asQAf18j51BTRupBF6eWEzeUdUUbJpUfSSYB1sa20XOmGRUGP0jHTVfDaEISzNMlH6JtTF7iP_5fmZ3Qe42KcFPxbmv1se5Z8ZRiRuH31q0uqLoPZONqpK_P.iWtze3mPXL_5VqTDr9ITUg&scope=openid" id="Play">Conta MyDisney</a></button>
+      <button class="botao"><a href="https://appleid.apple.com/auth/authorize?client_id=com.epicgames.siwa&redirect_uri=https%3A%2F%2Fwww.epicgames.com%2Fid%2Fapi%2Fapple%2Foauth-authorized&response_type=code&scope=name%20email&response_mode=form_post&state=eyJpZCI6ImVmZjI3YWMxMDA3MzQzZDM5N2RlMTQ1MzJlYjM1MWIwIn0%3D&nonce=v2QsR3J0" id="Play"></a> Entrar com a Apple</button>
+      <button class="botao"><a href="https://web.facebook.com/login.php?skip_api_login=1&api_key=1132078350149238&kid_directed_site=0&app_id=1132078350149238&signed_next=1&next=https%3A%2F%2Fweb.facebook.com%2Fdialog%2Foauth%3Fclient_id%3D1132078350149238%26redirect_uri%3Dhttps%253A%252F%252Faccounts.epicgames.com%252FOAuthAuthorized%26state%3DeyJpZCI6IjBlZTE4YjY1ZDU3YjRiMDdiZGJhY2VkYTdlZmU3Mjk5In0%253D%26scope%3Demail%252Cpublic_profile%252Cuser_friends%26response_type%3Dcode%26display%3Dpopup%26ret%3Dlogin%26fbapp_pres%3D0%26logger_id%3D3c8dc9b2-745f-45e5-9a20-3db259d2884d%26tp%3Dunspecified&cancel_url=https%3A%2F%2Faccounts.epicgames.com%2FOAuthAuthorized%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3DeyJpZCI6IjBlZTE4YjY1ZDU3YjRiMDdiZGJhY2VkYTdlZmU3Mjk5In0%253D%23_%3D_&display=popup&locale=pt_BR&pl_dbl=0" id="Play">Facebook</a></button>
+      <button class="botao"><a href="https://identity.lego.com/pt-BR/age?returnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fclient_id%3D87703425-e9ea-4c27-a23c-04eebb1389ae%26redirect_uri%3Dhttps%253A%252F%252Fwww.epicgames.com%252Fid%252Foauth-authorized%26state%3DeyJpZCI6ImFiNmNlYTA0NzEzZDQ4MGE5ZTA4NWU0YTg3MGU2NGNlIiwiY29kZUNoYWxsZW5nZSI6Ikl0b1hJbEc2cVRRaG5PMVg3TWtnbVRyMEJZU1ZxYjRTYmlMZGZ4clRyTzAifQ%253D%253D%26scope%3Dopenid%2520basic-profile%26response_type%3Dcode%26display%3Dpopup%26code_challenge%3DItoXIlG6qTQhnO1X7MkgmTr0BYSVqb4SbiLdfxrTrO0%26code_challenge_method%3DS256%26prompt%3Dselect_account%26nonce%3DXu0BJo1T%26suppressed_prompt%3Dselect_account" id="Play">Conta LEGO®️</a></button>
       <button class="botao"> Autodesk</button>
     </section>
 
