--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="Img/Epic_Games_logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Epic Games</title>
 </head>
 <body>
-    
+    <header>
+        <button class="imagem_principal"><img src="./Img/Epic_Games_logo.png" alt="" class="imagem_principal-img"></button>       
+    </header>
 </body>
 </html>
