--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <button class="imagem_principal"><img src="./Img/Epic_Games_logo.png" alt="" class="imagem_principal-img"></button>       
+        <nav>
+            <button class="imagem_principal"><img src="./Img/Epic_Games_logo.png" alt="" class="imagem_principal-img"></button> 
+            <a href="#">STORE</a>
+            <a href="suporte.html">Suporte</a>  
+            <a href="login.html">Login</a>
+        </nav>   
     </header>
 </body>
 </html>
