--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img src="img/epic.ico" alt="">
+  <a href="index.html" id="voltar">Voltar</a>  
   <div class="divpai">
     <h1>Entre na Epic Games</h1>
 
