--- a/suporte.html
+++ b/suporte.html
@@ -14,17 +14,17 @@
       <div class="Container">
         <div class="logo">EG</div>
         <div>
-          <h1>Central de Suporte — Epic Games</h1>
+          <h1 >Central de Suporte — Epic Games</h1>
           <p class="lead">Ajuda rápida para contas, compras e jogos. Resolva sua dúvida em poucos passos.</p>
         </div>
       </div>
       <div class="Respostas">
-        <div>✅ Resposta média: 24h</div>
-        <div>📞 Atendimento 24/7</div>
+        <button >✅ Resposta média: 24h</button>
+        <button>📞 Atendimento 24/7</button>
       </div>
     </header>
 
-    <aside class="sidebar" aria-label="Navegação de suporte">
+    <aside class="sidebar">
       <form class="search">
         <input id="q" type="search" aria-label="Pesquisar suporte" placeholder="Procure: ex. não consigo entrar" />
         <button type="submit" title="Pesquisar">Buscar</button>
@@ -33,11 +33,11 @@
       <nav aria-label="Menu de categorias">
         <div class="nav-group">
           <a href="#conta" class="active">👤 Conta e Segurança</a>
-          <a href="#pagamentos">💳 Pagamentos e Compras</a>
-          <a href="#jogos">🎮 Jogos e Erros Técnicos</a>
-          <a href="#reembolso">💰 Reembolsos</a>
-          <a href="#comunidade">💬 Comunidade</a>
-          <a href="#contato">📩 Fale Conosco</a>
+          <a href="#pagamentos" class="active">💳 Pagamentos e Compras</a>
+          <a href="#jogos" class="active">🎮 Jogos e Erros Técnicos</a>
+          <a href="#reembolso" class="active">💰 Reembolsos</a>
+          <a href="#comunidade" class="active">💬 Comunidade</a>
+          <a href="#contato" class="active">📩 Fale Conosco</a>
         </div>
       </nav>
     </aside>
