--- a/suporte.html
+++ b/suporte.html
@@ -42,7 +42,7 @@
       </nav>
     </aside>
 
-    <main class="content" id="content" tabindex="0">
+    <main class="content" id="content">
       <div class="hero">
         <div class="intro">
           <h2>Resolva rápido — solução passo a passo</h2>
