--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entrar na Epic Games</title>
   <link rel="stylesheet" href="login.css">
-  <link rel="shortcut icon" href="img/favicon.icoy" type="image/x-icon">
+  <link rel="shortcut icon" href="Img/Icon.epic.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <p>Somente no console? Entre para acessar seu progresso e suas compras.</p>
       <button class="botao"><a
           href="https://my.account.sony.com/sonyacct/signin/?client_id=559bf940-f58b-41b4-9c4d-f60a5019f885&redirect_uri=https%3A%2F%2Fwww.epicgames.com%2Fid%2Foauth-authorized&state=eyJpZCI6IjNhOWEyY2Q2NTIwYzQyYzFiYTViNjcxM2RiMmNmMGJmIn0%3D&scope=openid+psn%3As2s&response_type=code&display=popup&service_entity=urn%3Aservice-entity%3Apsn&ui=pr&cid=8c06926a-5a0d-4977-9de6-7d751b45be86&error=login_required&error_code=4165&no_captcha=true#/signin/input/id"
-          id="Play"> <img src="./img/ps.png" alt="PlaysTation"> PlayStation™️NetworkK</a></button>
+          id="Play"> <img src="Img/ps.png" alt="PlaysTation"> PlayStation™️NetworkK</a></button>
       <button class="botao"><a href="https://login.microsoft.com/consumers/fido/get?mkt=PT-BR&lc=1046&uiflavor=web"
           id="Play"><img src="Img/xbox.png" alt="Xbox">  Rede Xbox </a></button>
       
