--- a/suporte.html
+++ b/suporte.html
@@ -12,7 +12,7 @@
   <div class="wrap" role="main">
     <header class="site-header" aria-label="Cabeçalho da central de suporte">
       <div class="Container">
-        <div class="logo">EG</div>
+        <div class="logo"><a href="index.html">Inicio</a></div>
         <div>
           <h1>Central de Suporte — Epic Games</h1>
           <p class="lead">Ajuda rápida para contas, compras e jogos. Resolva sua dúvida em poucos passos.</p>
