--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Loja — Modelo</title>
+  <link rel="shortcut icon" href="./Img/Icon.epic.ico" type="image/x-icon">
 </head>
 <body>
   <header class="topbar">
     <div class="topbar-inner">
-      <div class="brand">EPIC</div>
+      <div><img src="./Img/Icon.epic.ico" alt="Logo da epic" id="epic"></div>
 
       <nav class="main-nav">
-        <a href="index.html">STORE</a>
-        <a href="suporte.html">Suporte</a>
+        <a href="./index.html">STORE</a>
+        <a href="./suporte.html">Suporte</a>
       </nav>
 
       <div class="actions">
-        <button class="btn ghost">Entrar</button>
+        <a href="./login.html" class="btn ghost"  id="entrar">Entrar</a>
         <button class="btn primary">Download</button>
       </div>
     </div>
@@ -41,7 +42,7 @@
         <div class="hero-image"></div>
         <div class="hero-content">
           <h2>BATTLEFIELD 6</h2>
-          <img src="Img/batlle.png" alt="6" width="800">
+          <img src="./Img/batlle.png" alt="6" width="800">
           <p class="tag">COMBATE DE ALTA INTENSIDADE</p>
           <p class="desc">
             A espera acabou, soldado. Baixe agora e viva o ápice da experiência de guerra hoje mesmo.
@@ -56,7 +57,7 @@
 
       <aside class="sidebar">
         <ul class="game-list">
-          <li><span class="thumb"> <img src="Img/battle(2).png" alt="6" width="30"></span>Battlefield 6</li>
+          <li><span class="thumb"> <img src="./Img/battle(2).png" alt="6" width="30"></span>Battlefield 6</li>
           <li><span class="thumb"> </span>Zenless Zone Zero</li>
           <li><span class="thumb"> </span>Borderlands 4</li>
           <li><span class="thumb"> </span>Bloodlines 2</li>
