--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entrar na Epic Games</title>
-  <link rel="stylesheet" href="login.css">
-  <link rel="shortcut icon" href="Img/Icon.epic.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./login.css">
+  <link rel="shortcut icon" href="./Img/Icon.epic.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -66,8 +66,8 @@
     </section>
 
     <footer>
-      <a href="problemas.html">Problemas para entrar na sua conta?</a><br>
-      <a href="#">Política de Privacidade</a>
+      <a href="./problemas.html">Problemas para entrar na sua conta?</a><br>
+      <a href="./privacidade.html">Política de Privacidade</a>
     </footer>
   </div>
 </body>
