--- a/problemas.html
+++ b/problemas.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recuperar conta</title>
-  <link rel="stylesheet" href="problemas.css">
+  <link rel="stylesheet" href="./problemas.css">
+  <link rel="shortcut icon" href="/Img/Icon.epic.ico" type="image/x-icon">
 </head>
 <body>
   <div id="caixa">
-    <a id="voltar" href="login.html">Voltar</a>
+    <a id="voltar" href="./login.html">Voltar</a>
 
     <h1>Não consegue acessar sua conta?</h1>
     <p id="descricao">
@@ -20,7 +21,7 @@
 
     <button id="continuar" type="submit">Continuar</button>
 
-    <a id="privacidade" href="#">Política de Privacidade</a>
+    <a id="privacidade" href="./privacidade.html">Política de Privacidade</a>
   </div>
 </body>
 </html>
