--- a/suporte.html
+++ b/suporte.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="Suporte.css">
   <title>Guia de Suporte — Epic Games (Versão Diferente)</title>
+  <link rel="shortcut icon" href="./Img/Icon.epic.ico" type="image/x-icon">
 </head>
 
 <body>
   <div class="wrap" role="main">
     <header class="site-header" aria-label="Cabeçalho da central de suporte">
       <div class="Container">
-        <div class="logo"><a href="index.html">Inicio</a></div>
+        <div class="logo"><a href="./index.html">Inicio</a></div>
         <div>
           <h1>Central de Suporte — Epic Games</h1>
           <p class="lead">Ajuda rápida para contas, compras e jogos. Resolva sua dúvida em poucos passos.</p>
