--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
           <div class="hero-cta">
             <span class="price">R$ 299</span>
             <button class="btn primary">Compre agora</button>
-            <a class="wishlist" href="#">Para a Lista de Desejos</a>
+            <a class="wishlist" href="#"><img src="./Img/Adicionar.png" alt="" width="30px"></a>
           </div>
         </div>
       </article>
 
       <aside class="sidebar">
         <ul class="game-list">
-          <li><span class="thumb"> <img src="./Img/battle(2).png" alt="6" width="30"></span>Battlefield 6</li>
-          <li><span class="thumb"> </span>Zenless Zone Zero</li>
-          <li><span class="thumb"> </span>Borderlands 4</li>
-          <li><span class="thumb"> </span>Bloodlines 2</li>
-          <li><span class="thumb"> </span>GTA Online</li>
-          <li><span class="thumb"> </span>Honkai: Star Rail</li>
+          <li><span class="thumb"> <img src="./Img/battle(2).png" alt="" width="45px" height="60px"></span>Battlefield 6</li>
+          <li><span class="thumb"> <img src="./Img/ZenlessZZ_capa.png" alt="" width="45px" height="60px"></span>Zenless Zone Zero</li>
+          <li><span class="thumb"> <img src="./Img/Borderlands_4_capa.png" alt="" width="45px" height="60px"></span>Borderlands 4</li>
+          <li><span class="thumb"> <img src="./Img/bloodlines-2_capa.png" alt="" width="45px" height="60px"></span>Bloodlines 2</li>
+          <li><span class="thumb"> <img src="./Img/GtaOnline_capa.png" alt="" width="45px" height="60px"></span>GTA Online</li>
+          <li><span class="thumb"> <img src="./Img/HonkaiSR_capa.png" alt="" width="45px" height="60px"></span>Honkai: Star Rail</li>
         </ul>
       </aside>
     </section>
@@ -70,10 +70,10 @@
     <section class="discover">
       <h3>Descubra algo novo</h3>
       <div class="cards-row">
-        <div class="small-card">Sugestão 1</div>
-        <div class="small-card">Sugestão 2</div>
-        <div class="small-card">Sugestão 3</div>
-      </div>
+        <div class="small-card" id="jogo1"><img src="./Img/Hogwartslegacy_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base + DLC</h5><h4 class="nomejogo_descubra">Hogwarts Legacy - Deluxe</h4><p class="comprarjogo_descubra">R$ 299 <button class="btn primary">Compre agora</button></p></div>
+        <div class="small-card" id="jogo2"><img src="./Img/GothamKnights_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base + DLC</h5><h4 class="nomejogo_descubra">Gotham Knights - Deluxe Edition</h4><p class="comprarjogo_descubra">R$ 350 <button class="btn primary">Compre agora</button></p></div>
+        <div class="small-card" id="jogo3"><img src="./Img/Spideman_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base</h5><h4 class="nomejogo_descubra">Marvel's Spider-Man - Remastered</h4><p class="comprarjogo_descubra">R$ 199 <button class="btn primary">Compre agora</button></p></div>
+        <div class="small-card" id="jogo4"><img src="./Img/Hotwheels_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base</h5><h4 class="nomejogo_descubra">Hotwheels Unleashed</h4><p class="comprarjogo_descubra">R$ 150 <button class="btn primary">Compre agora</button></p></div>
     </section>
   </main>
 
