--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -7,6 +8,7 @@
   <title>Loja — Modelo</title>
   <link rel="shortcut icon" href="./Img/Icon.epic.ico" type="image/x-icon">
 </head>
+
 <body>
   <header class="topbar">
     <div class="topbar-inner">
@@ -18,7 +20,7 @@
       </nav>
 
       <div class="actions">
-        <a href="./login.html" class="btn ghost"  id="entrar">Entrar</a>
+        <a href="./login.html" class="btn ghost" id="entrar">Entrar</a>
         <button class="btn primary">Download</button>
       </div>
     </div>
@@ -57,12 +59,18 @@
 
       <aside class="sidebar">
         <ul class="game-list">
-          <li><span class="thumb"> <img src="./Img/battle(2).png" alt="" width="45px" height="60px"></span>Battlefield 6</li>
-          <li><span class="thumb"> <img src="./Img/ZenlessZZ_capa.png" alt="" width="45px" height="60px"></span>Zenless Zone Zero</li>
-          <li><span class="thumb"> <img src="./Img/Borderlands_4_capa.png" alt="" width="45px" height="60px"></span>Borderlands 4</li>
-          <li><span class="thumb"> <img src="./Img/bloodlines-2_capa.png" alt="" width="45px" height="60px"></span>Bloodlines 2</li>
-          <li><span class="thumb"> <img src="./Img/GtaOnline_capa.png" alt="" width="45px" height="60px"></span>GTA Online</li>
-          <li><span class="thumb"> <img src="./Img/HonkaiSR_capa.png" alt="" width="45px" height="60px"></span>Honkai: Star Rail</li>
+          <li><span class="thumb"> <img src="./Img/battle(2).png" alt="" width="45px" height="60px"></span>Battlefield 6
+          </li>
+          <li><span class="thumb"> <img src="./Img/ZenlessZZ_capa.png" alt="" width="45px" height="60px"></span>Zenless
+            Zone Zero</li>
+          <li><span class="thumb"> <img src="./Img/Borderlands_4_capa.png" alt="" width="45px"
+                height="60px"></span>Borderlands 4</li>
+          <li><span class="thumb"> <img src="./Img/bloodlines-2_capa.png" alt="" width="45px"
+                height="60px"></span>Bloodlines 2</li>
+          <li><span class="thumb"> <img src="./Img/GtaOnline_capa.png" alt="" width="45px" height="60px"></span>GTA
+            Online</li>
+          <li><span class="thumb"> <img src="./Img/HonkaiSR_capa.png" alt="" width="45px" height="60px"></span>Honkai:
+            Star Rail</li>
         </ul>
       </aside>
     </section>
@@ -70,15 +78,123 @@
     <section class="discover">
       <h3>Descubra algo novo</h3>
       <div class="cards-row">
-        <div class="small-card" id="jogo1"><img src="./Img/Hogwartslegacy_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base + DLC</h5><h4 class="nomejogo_descubra">Hogwarts Legacy - Deluxe</h4><p class="comprarjogo_descubra">R$ 299 <button class="btn primary">Compre agora</button></p></div>
-        <div class="small-card" id="jogo2"><img src="./Img/GothamKnights_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base + DLC</h5><h4 class="nomejogo_descubra">Gotham Knights - Deluxe Edition</h4><p class="comprarjogo_descubra">R$ 350 <button class="btn primary">Compre agora</button></p></div>
-        <div class="small-card" id="jogo3"><img src="./Img/Spideman_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base</h5><h4 class="nomejogo_descubra">Marvel's Spider-Man - Remastered</h4><p class="comprarjogo_descubra">R$ 199 <button class="btn primary">Compre agora</button></p></div>
-        <div class="small-card" id="jogo4"><img src="./Img/Hotwheels_capa.png" width="300px" class="capa_descobrir"><h5 class="tipojogo_descubra">Jogo base</h5><h4 class="nomejogo_descubra">Hotwheels Unleashed</h4><p class="comprarjogo_descubra">R$ 150 <button class="btn primary">Compre agora</button></p></div>
+        <div class="small-card" id="jogo1"><img src="./Img/Hogwartslegacy_capa.png" width="300px"
+            class="capa_descobrir">
+          <h5 class="tipojogo_descubra">Jogo base + DLC</h5>
+          <h4 class="nomejogo_descubra">Hogwarts Legacy - Deluxe</h4>
+          <p class="comprarjogo_descubra">R$ 299 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo2"><img src="./Img/GothamKnights_capa.png" width="300px" class="capa_descobrir">
+          <h5 class="tipojogo_descubra">Jogo base + DLC</h5>
+          <h4 class="nomejogo_descubra">Gotham Knights - Deluxe Edition</h4>
+          <p class="comprarjogo_descubra">R$ 350 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo3"><img src="./Img/Spideman_capa.png" width="300px" class="capa_descobrir">
+          <h5 class="tipojogo_descubra">Jogo base</h5>
+          <h4 class="nomejogo_descubra">Marvel's Spider-Man - Remastered</h4>
+          <p class="comprarjogo_descubra">R$ 199 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo4"><img src="./Img/Hotwheels_capa.png" width="300px" class="capa_descobrir">
+          <h5 class="tipojogo_descubra">Jogo base</h5>
+          <h4 class="nomejogo_descubra">Hotwheels Unleashed</h4>
+          <p class="comprarjogo_descubra">R$ 150 <button class="btn primary">Compre agora</button></p>
+        </div>
     </section>
+    <section class="highlights">
+      <h3>Destaques e Ofertas</h3>
+      <div class="cards-row">
+        <div class="small-card" id="jogo5">
+          <img src="./Img/hades.jpg"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Oferta por tempo limitado</h5>
+          <h4 class="nomejogo_descubra">Hades II</h4>
+          <p class="comprarjogo_descubra">R$ 89 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo6">
+          <img src="./Img/cyberpunk.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">-50%</h5>
+          <h4 class="nomejogo_descubra">Cyberpunk 2077</h4>
+          <p class="comprarjogo_descubra">R$ 99 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo7">
+          <img src="./Img/resident.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Terror e sobrevivência</h5>
+          <h4 class="nomejogo_descubra">Resident Evil 4 Remake</h4>
+          <p class="comprarjogo_descubra">R$ 229 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo8">
+          <img src="./Img/red_dead.avif"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Oferta especial</h5>
+          <h4 class="nomejogo_descubra">Red Dead Redemption 2</h4>
+          <p class="comprarjogo_descubra">R$ 139 <button class="btn primary">Compre agora</button></p>
+        </div>
+      </div>
+    </section>
+
+    <section class="popular">
+      <h3>Jogos Populares</h3>
+      <div class="cards-row">
+        <div class="small-card" id="jogo9">
+          <img src="./Img/eafc.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Mais jogado</h5>
+          <h4 class="nomejogo_descubra">EA Sports FC 24</h4>
+          <p class="comprarjogo_descubra">R$ 349 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo10">
+          <img src="./Img/valorant.jfif"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Gratuito</h5>
+          <h4 class="nomejogo_descubra">Valorant</h4>
+          <p class="comprarjogo_descubra">Grátis <button class="btn primary">Jogar</button></p>
+        </div>
+        <div class="small-card" id="jogo11">
+          <img src="./Img/counter.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">FPS competitivo</h5>
+          <h4 class="nomejogo_descubra">Counter-Strike 2</h4>
+          <p class="comprarjogo_descubra">Grátis <button class="btn primary">Jogar</button></p>
+        </div>
+        <div class="small-card" id="jogo12">
+          <img src="./Img/fortinite.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Battle Royale</h5>
+          <h4 class="nomejogo_descubra">Fortnite</h4>
+          <p class="comprarjogo_descubra">Grátis <button class="btn primary">Jogar</button></p>
+        </div>
+      </div>
+    </section>
+
+    <section class="recommended">
+      <h3>Recomendados para Você</h3>
+      <div class="cards-row">
+        <div class="small-card" id="jogo13">
+          <img src="./Img/elden.jpg"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Aventura e RPG</h5>
+          <h4 class="nomejogo_descubra">Elden Ring</h4>
+          <p class="comprarjogo_descubra">R$ 299 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo14">
+          <img src="./Img/stardew.jfif"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Simulador de fazenda</h5>
+          <h4 class="nomejogo_descubra">Stardew Valley</h4>
+          <p class="comprarjogo_descubra">R$ 24 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo15">
+          <img src="./Img/witcher.jfif"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">RPG de mundo aberto</h5>
+          <h4 class="nomejogo_descubra">The Witcher 3: Wild Hunt</h4>
+          <p class="comprarjogo_descubra">R$ 79 <button class="btn primary">Compre agora</button></p>
+        </div>
+        <div class="small-card" id="jogo16">
+          <img src="./Img/spire.webp"  class="capa_descobrir" class="img_jogo">
+          <h5 class="tipojogo_descubra">Cartas e estratégia</h5>
+          <h4 class="nomejogo_descubra">Slay the Spire</h4>
+          <p class="comprarjogo_descubra">R$ 39 <button class="btn primary">Compre agora</button></p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
     <p>© 2025 Modelo — Exemplo de layout</p>
   </footer>
 </body>
+
 </html>
