--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </aside>
     </section>
 
-    <section class="discover">
+    <section class="discover" class="caixas">
       <h3>Descubra algo novo</h3>
       <div class="cards-row">
         <div class="small-card" id="jogo1"><img src="./Img/Hogwartslegacy_capa.png" width="300px"
@@ -100,7 +100,7 @@
           <p class="comprarjogo_descubra">R$ 150 <button class="btn primary">Compre agora</button></p>
         </div>
     </section>
-    <section class="highlights">
+    <section class="highlights" class="caixas">
       <h3>Destaques e Ofertas</h3>
       <div class="cards-row">
         <div class="small-card" id="jogo5">
@@ -130,7 +130,7 @@
       </div>
     </section>
 
-    <section class="popular">
+    <section class="popular" class="caixas">
       <h3>Jogos Populares</h3>
       <div class="cards-row">
         <div class="small-card" id="jogo9">
@@ -160,7 +160,7 @@
       </div>
     </section>
 
-    <section class="recommended">
+    <section class="recommended" class="caixas">
       <h3>Recomendados para Você</h3>
       <div class="cards-row">
         <div class="small-card" id="jogo13">
@@ -193,7 +193,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Modelo — Exemplo de layout</p>
+    <p>© 2025 Epic Games</p>
   </footer>
 </body>
 
